registration docs updated, test documentation template almost finished
