# docs/swagger.json
@@ -47,8 +47,17 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "201": {
+                        "description": "user registered",
+                        "schema": {
+                            "$ref": "#/definitions/finworker_internal_models_responses_users.RegisterResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "test",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -89,7 +98,7 @@
                     "type": "string"
                 },
                 "gender": {
-                    "description": "Gender. `male`, `female` or `battle helicopter`.",
+                    "description": "Gender. `male`/`female`.",
                     "type": "string"
                 },
                 "name": {
@@ -102,6 +111,37 @@
                 },
                 "username": {
                     "description": "Username, which will be displayed and unique.",
+                    "type": "string"
+                }
+            }
+        },
+        "finworker_internal_models_responses_users.RegisterResponse": {
+            "type": "object",
+            "properties": {
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "birthday": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
